--- a/module2_solution/css/styles.css
+++ b/module2_solution/css/styles.css
@@ -39,7 +39,7 @@ section {
 	overflow: auto;
 }
 
-#chicken {
+#Chicken {
 	border: 1px solid black;
 	text-align: center;
 	width: 30%;
@@ -53,7 +53,7 @@ section {
 	background-color: #FFFF00;
 }
 
-#beef {
+#Mutton {
 	border: 1px solid black;
 	text-align: center;
 	width: 30%;
@@ -67,7 +67,7 @@ section {
 	background-color: #FF1439;
 }
 
-#sushi {
+#Vegeterian {
 	border: 1px solid black;
 	text-align: center;
 	width: 30%;
